docs: clean README + hide internal dev docs from repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 .vercel
+
+# Internal development documentation (keep local only)
+FIXES-SUMMARY.md
+GLOBAL-ASSESSMENT.md
+LAUNCH-ROADMAP.md
+POLISH-UPDATES.md
+TESTING-CHECKLIST.md
